# src/controllers/analysisController.js
@@ -2,6 +2,62 @@ const { Analysis } = require('../models/Analysis')
 
 // Public route
 const getAllAnalyzes = async (req, res) => {
+  /*
+    #swagger.summary = "Public route"
+    #swagger.description = "List all analyzes."
+    #swagger.security = []
+    #swagger.responses[200] = {
+      content: {
+        "application/json": {
+          example: {
+            "analyzes": [
+              {
+                "_id": "64dfe7a07bc2d9ba5c315790",
+                "request": {
+                  "_id": "64dfe6d47bc2d9ba5c315769",
+                  "customer": "64dfe6317bc2d9ba5c31575b",
+                  "company": {
+                    "_id": "64dfe6267bc2d9ba5c315753",
+                    "name": "XYZ Enterprises",
+                    "industry": "Finance",
+                    "cnpj": "00.705.432/0001-02",
+                    "score": 0,
+                    "headquartersLocation": {
+                      "street": "456 Elm Avenue",
+                      "city": "Townsville",
+                      "state": "Province",
+                      "postalCode": "50000-000",
+                      "country": "Country",
+                      "_id": "64dfe6267bc2d9ba5c315754"
+                    }
+                  },
+                  "motive": "Lorem",
+                  "status": "Approved",
+                  "requestDate": "2023-08-18T21:47:00.881Z"
+                },
+                "analyst": "64dfe75d7bc2d9ba5c315780",
+                "firmLevelClaimScore": 0,
+                "firmLevelExecutionalScore": 0,
+                "ascore": 0,
+                "status": "Assigned",
+                "createdAt": "2023-08-18T21:50:24.770Z",
+                "analysisDate": "2023-08-18T21:50:24.770Z"
+              },
+            ]
+          }
+        }
+      }           
+    }
+    #swagger.responses[500] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "An error occurred while fetching analyzes"
+          }
+        }           
+      }
+    }
+  */
   try {
     let analyzes = await Analysis.find()
       .populate({
@@ -23,6 +79,60 @@ const getAllAnalyzes = async (req, res) => {
 
 // Public route
 const getAnalysisByID = async (req, res) => {
+  /*
+    #swagger.summary = "Public route"
+    #swagger.description = "Shows information about one analysis determined by ID."
+    #swagger.security = []
+    #swagger.responses[200] = {
+      content: {
+        "application/json": {
+          example: {
+            "analysis": {
+              "_id": "64dfe7a07bc2d9ba5c315790",
+              "request": {
+                "_id": "64dfe6d47bc2d9ba5c315769",
+                "customer": "64dfe6317bc2d9ba5c31575b",
+                "company": {
+                  "_id": "64dfe6267bc2d9ba5c315753",
+                  "name": "XYZ Enterprises",
+                  "industry": "Finance",
+                  "cnpj": "00.705.432/0001-02",
+                  "score": 0,
+                  "headquartersLocation": {
+                    "street": "456 Elm Avenue",
+                    "city": "Townsville",
+                    "state": "Province",
+                    "postalCode": "50000-000",
+                    "country": "Country",
+                    "_id": "64dfe6267bc2d9ba5c315754"
+                  }
+                },
+                "motive": "Lorem",
+                "status": "Approved",
+                "requestDate": "2023-08-18T21:47:00.881Z"
+              },
+              "analyst": "64dfe75d7bc2d9ba5c315780",
+              "firmLevelClaimScore": 0,
+              "firmLevelExecutionalScore": 0,
+              "ascore": 0,
+              "status": "Assigned",
+              "createdAt": "2023-08-18T21:50:24.770Z",
+              "analysisDate": "2023-08-18T21:50:24.770Z"
+            }
+          }
+        }
+      }           
+    }
+    #swagger.responses[500] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "An error occurred while fetching the analysis"
+          }
+        }           
+      }
+    }
+  */
   try {
     const analysisID = req.params.id
 
@@ -55,12 +165,53 @@ const getAnalysisByID = async (req, res) => {
     res.status(200).json({ analysis })
 
   } catch (error) {
-    res.status(500).json({ message: error.message })
+    res.status(500).json({ message: 'An error occurred while fetching the analysis' })
   }
 }
 
 // Private route for analysts
 const updateAnalysisByID = async (req, res) => {
+  /*
+    #swagger.summary = "Private route for analysts"
+    #swagger.description = "Updates information about one analysis determined by ID. Requires the analyst logged in to be the one in charge of the analysis."
+    #swagger.requestBody = {
+      required: true,
+      content: {
+        "application/json": {
+          schema: {
+            $ref: "#/components/schemas/analysis"
+          }  
+        }
+      }
+    }
+    #swagger.responses[200] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "Analysis updated successfully"
+          }          
+        }
+      }
+    }
+    #swagger.responses[400] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "To update an analysis, at least one field (firmLevelClaimScore, firmLevelExecutionalScore, status) must be provided"
+          }          
+        }
+      }
+    }
+    #swagger.responses[500] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "An error occurred while updating the analysis"
+          }
+        }           
+      }
+    }
+  */
   try {
     const analysisID = req.params.id
     const data = req.body.analysis
@@ -93,12 +244,34 @@ const updateAnalysisByID = async (req, res) => {
   
     res.status(200).json({ message: 'Analysis updated successfully' })
   } catch (error) {
-    res.status(500).json({ message: error.message })
+    res.status(500).json({ message: 'An error occurred while updating the analysis' })
   }
 }
 
 // Private route for analysts
 const deleteAnalysisByID = async (req, res) => {
+  /*
+    #swagger.summary = "Private route for analysts"
+    #swagger.description = "Deletes one analysis determined by ID. Requires the analyst logged in to be the one in charge of the analysis."
+    #swagger.responses[200] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "Analysis deleted successfully"
+          }          
+        }
+      }
+    }
+    #swagger.responses[500] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "An error occurred while deleting the analysis"
+          }
+        }           
+      }
+    }
+  */
   try {
     const analysisID = req.params.id
     const user = req.user
@@ -119,7 +292,7 @@ const deleteAnalysisByID = async (req, res) => {
     await Analysis.deleteOne({ _id: analysisID})
     res.status(200).json({ message: 'Analysis deleted successfully' })
   } catch (error) {
-    res.status(500).json({ message: error.message })
+    res.status(500).json({ message: 'An error occurred while deleting the analysis' })
   }
 }
 
